# POE2_Tools

./: .gitignore  BRIAN_START_HERE.md  Cargo.toml  FASTBUILDS.md  POE2_Tree.json  POE2_Tree.txt  README.md  TODO.md  a2b.html  a2b.py  config.toml  dist-from.py  expanded_tree.json  find-node-by-name.py  flow-of-water-tree-maker.py  flow-of-water-tree.json  flow-of-water-tree.jsonl  hits.txt  notes.rs  notes10.md  notes4.md  notes6.md  notes7.md  notes9.md  passive_tree.html  path.py  poe_tree_types.py  project_structure.txt  pyproject.toml  repo_maintenence.py  rpc_example.sh  runme.sh  small_tree.jsonl  tree_config.toml  trim-flow.py  vis-poe-tree-selection-dist.html  vis-poe-tree-selection-dist2.py  what-fmr.py
.cargo/: config.toml
assets/: attributions.txt
crates/dep_poe_vis/: Cargo.toml
crates/dep_poe_vis/src/: background_services.rs  controls.rs  lib.rs
crates/poe_tree/: Cargo.toml  build.rs
crates/poe_tree/benches/: README.md  bfs_vs_dijkstra.rs  str_vs_enum_match.rs  take_while.rs  walk_n_steps.rs
crates/poe_tree/examples/: all_starts_to_chaos_inoculation.rs  common.rs  evasion.rs  highsearchterm.rs  lightning_dam.rs  node_count.rs  paths_with_x.rs  possible_builds.rs  simple_optimise.rs  stat_parse.rs
crates/poe_tree/scripts/: StatTypeGen.py  notes.md  unique_stats.py
crates/poe_tree/src/: character.rs  config.rs  consts.rs  coordinates.rs  debug_utils.rs  edges.rs  exploration.rs  filtering.rs  lib.rs  log.rs  nodes.rs  optimiser.rs  pathfinding.rs  skills.rs  stats.rs  type_wrappings.rs
crates/poe_tree/src/data/: mod.rs
crates/poe_tree/src/data/poe_tree/: character.rs  consts.rs  debug_utils.rs  edges.rs  mod.rs  nodes.rs  pathfinding.rs  skills.rs  stats.rs  type_wrappings.rs
crates/poe_tree/src/pob_utils/: generated.rs  mod.rs
crates/poe_tree/src/stats/: mod.rs  stat.rs  stats_enum.rs
crates/poe_vis/: Cargo.toml
crates/poe_vis/assets/shaders/: dotted_line.wgsl  myshader_2d.wgsl
crates/poe_vis/benches/: virtual_paths.rs
crates/poe_vis/examples/: all_starts_to_chaos_inoculation.rs  branches.rs  colourful.rs  common.rs  highsearchterm.rs  node_positions.rs  paint_20.rs  possible_builds.rs  rpc_example.sh  text.rs  visualise_groups.rs
crates/poe_vis/src/: background_services.rs  camera.rs  characters.rs  components.rs  config.rs  consts.rs  controls.rs  debug.rs  drawing.rs  events.rs  hotkeys.rs  init_tree.rs  io.rs  lib.rs  main.rs  materials.rs  mouse.rs  nodes.rs  overlays_n_popups.rs  remote.rs  resources.rs  search.rs  shaders.rs  ui.rs
crates/poe_vis/src/background_services/: edges.rs  generated.rs  misc.rs  mod.rs  nodes.rs  optimiser_utils.rs  paths.rs  virtual_paths.rs
crates/poe_vis/src/drawing/: mod.rs  nodes.rs  rhs_menu.rs  top_menu.rs
crates/poe_vis/src/nodes/: hover.rs  materials.rs  mod.rs
crates/poe_vis/src/shaders/: mod.rs
crates/poo_visualiser/: Cargo.toml
crates/poo_visualiser/src/: background_services.rs  camera.rs  debug.rs  drawing.rs  io.rs  lib.rs  main.rs
data/: 1pt-ranger.toml  POE2_Tree.json  character.toml  complex-with-jewl.xml  empty-build.xml  empty-mercenary.xml  empty-sorceress.xml  empty-warrior.xml  empty-witch.xml  monk-high-evasion.xml  schema.txt  small_tree.json  test-with-jewl.xml  text-export.xml  text-export3.xml  user_config.toml
dep_poe_vis/src/: controls.rs  main.rs
dep_poe_vis/src/nodes/: hover.rs  mod.rs
deprecated/: ggez_vis.rs  main.rs  tree_utils.rs  update-helix.ps1  visual.rs
experiments/: a2b.py  common.py  dist-from.html  expand-tree.py  log-search.py  proper-node-placement.py  tree-vis-4o.py  tree-vis_gemini.py  treedump.sh  tsx-inspired-vis.py  vis-poe-tree-selection-dist.py  vis-poe-tree-selection-dist2.html
experiments/deprecated/: Untitled-1.json  ggez_vis.rs  main.rs  trader_ideas.py  tree_utils.rs  visual.rs
experiments/deprecated/maxroll/: TreeViewer.tsx  assets.ts  canvasRenderer.ts  passive_tree_common.bundle  passive_tree_icons.bundle  puppet.py  renderItems.ts
experiments/loggy/: output.txt
experiments/maxroll/: passive_tree_strfourb.bundle  renderAtlas.ts  renderPassives.ts  tree.ts  treeMutation.ts  treeTimeless.ts  tsx-inspired-vis.py  uniqueMods.ts  vertexWriter.ts
experiments/shop/: one
maxroll/: TreeRenderer.tsx  renderer.ts  treeData.ts
notes/: notes.md  notes6.md  notes7.md
scripts/: notes.md  unique_stats.py
src/: config.rs  data.rs  egui_vis.rs  lib.rs  log.rs  main.rs  notes5.md  notes6.md  tree_utils.rs  visual.rs  visualiser.rs
src/data/: consts.rs  mod.rs  skills.rs  stats.rs
src/data/poe_tree/: character.rs  consts.rs  coordinates.rs  debug_utils.rs  edges.rs  mod.rs  nodes.rs  pathfinding.rs  skills.rs  stats.rs  type_wrappings.rs
src/visualiser/: mod.rs
