#$ Cargo.toml
[package]
name = "poe_tools"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["crates/poe_tree", "crates/poe_vis"]

[workspace.dependencies]
anyhow = "1.0.95"
eframe = "0.30.0"
egui = "0.30.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
rfd = "0.15.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_yaml = "0.9.34"
toml = "0.8.19"
poe_tree = { path = "crates/poe_tree" }
chrono = "0.4.39"

[dependencies]
rfd.workspace = true
