#$ Cargo.toml
[package]
name = "poe_tools"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["crates/poe_tree", "crates/poe_vis"]

[workspace.dependencies]
poe_tree = { path = "crates/poe_tree" }

anyhow = "1.0.95"
log = "0.4.22"
pretty_env_logger = "0.5.0"
rfd = "0.15.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_yaml = "0.9.34"
toml = "0.8.19"
chrono = "0.4.39"
bevy = { version = "0.15.1", features = [
    "file_watcher",
] } #, "bevy_dev_tools"] }
tracing-subscriber = "0.3.19"
bitset = "0.1.2"
rayon = "1.10.0"
jsonrpc-core = "18.0.0"
jsonrpc-http-server = "18.0.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
crossbeam-channel = "0.5.14"
bevy_cosmic_edit = "0.26.0"
bevy_egui = "0.32.0"
num_cpus = "1.16.0"
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
rand = "0.9.0"
regex = "1.11.1"
quick-xml = "0.37.2"
criterion = "0.5.1"
