#$ crates/poe_tree/Cargo.toml
[package]
name = "poe_tree"
version = "0.1.0"
edition = "2021"


[[examples]]
name = "node_count"
path = "examples/node_count.rs"

[[example]]
name = "lightning_dam"
path = "examples/lightning_dam.rs"

[[examples]]
name = "evasion"
path = "examples/evasion.rs"

[[examples]]
name = "possible"
path = "examples/possible_builds.rs"

[[examples]]
name = "all2chaos"
path = "examples/all_starts_to_chaos_inoculation.rs"


[dependencies]
log = { workspace = true }
pretty_env_logger = { workspace = true }
rfd = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
bitset.workspace = true
rayon.workspace = true
num_cpus.workspace = true
crossbeam-channel.workspace = true

[dev-dependencies]
reqwest = { workspace = true, features = ["blocking"] }
