#$ crates/poe_vis/Cargo.toml
[package]
name = "poe_vis"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "vis"
path = "src/main.rs"

[lib]
name = "poe_vis"
path = "src/lib.rs"


[dependencies]
poe_tree = { workspace = true }

bevy = { workspace = true, features = ["file_watcher"] }
bevy_cosmic_edit.workspace = true
bevy_egui.workspace = true
crossbeam = { workspace = true, features = ["crossbeam-channel"] }
crossbeam-channel.workspace = true
jsonrpc-core.workspace = true
jsonrpc-http-server.workspace = true
log = { workspace = true }
pretty_env_logger = { workspace = true }
rfd = { workspace = true }
serde_json = { workspace = true }
serde.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
